fix(manager): drop redundant launcher --add-modules, rename helper
jlink already links --incubator modules into the image via
linkModules()'s existing extraModuleNames list. Verified with a
standalone multi-module jlink spike that the module system resolves
a jlink'd image's own service providers (ServiceLoader uses/provides)
and their transitive requires automatically at launch, with no
explicit --add-modules needed on the java command line — so
generateLauncher() didn't need touching at all. Revert it to its
original form and rename incubatorModuleNames() to incubatorModules().

Update the covering test to assert against the linked image's module
list instead of launcher script text.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01V4mgLEhQz15ZKQp6KKKsmX