@@ -737,7 +737,7 @@ public final class ZpmInstall extends ZpmCommand
         }
     }
 
-    private List<String> incubatorModuleNames()
+    private List<String> incubatorModules()
     {
         return incubator.stream()
             .map(name -> String.format("jdk.incubator.%s", name))
@@ -760,7 +760,7 @@ public final class ZpmInstall extends ZpmCommand
         {
             extraModuleNames.add("java.instrument");
         }
-        extraModuleNames.addAll(incubatorModuleNames());
+        extraModuleNames.addAll(incubatorModules());
 
         extraModuleNames.add("java.management");
         extraModuleNames.add("jdk.management");
@@ -795,7 +795,8 @@ public final class ZpmInstall extends ZpmCommand
 
     private void generateLauncher() throws IOException
     {
-        List<String> lines = new ArrayList<>(Arrays.asList(
+        Path zillaPath = launcherDir.resolve("zilla");
+        Files.write(zillaPath, Arrays.asList(
             "#!/bin/sh",
             "if [ -n \"$ZILLA_INCUBATOR_ENABLED\" ]; then",
             "JAVA_OPTIONS=\"$JAVA_OPTIONS -Dzilla.incubator.enabled=$ZILLA_INCUBATOR_ENABLED\"",
@@ -805,23 +806,12 @@ public final class ZpmInstall extends ZpmCommand
             "JAVA_OPTIONS=\"$JAVA_OPTIONS --add-opens java.base/jdk.internal.misc=ALL-UNNAMED " +
                 "--add-opens java.base/jdk.internal.misc=org.agrona " +
                 "--enable-native-access=io.aklivity.zilla.runtime.common.agrona " +
-                "--sun-misc-unsafe-memory-access=%s\"".formatted(unsafeMemoryAccess)));
-
-        List<String> incubatorModuleNames = incubatorModuleNames();
-        if (!incubatorModuleNames.isEmpty())
-        {
-            lines.add(String.format("JAVA_OPTIONS=\"$JAVA_OPTIONS --add-modules %s\"",
-                String.join(",", incubatorModuleNames)));
-        }
-
-        lines.add(String.format(String.join(" ", Arrays.asList(
-                "exec $ZILLA_DIRECTORY/%s/bin/java",
-                "$JAVA_OPTIONS",
-                "-m io.aklivity.zilla.runtime.command/io.aklivity.zilla.runtime.command.internal.ZillaMain \"$@\"")),
-            imageDir));
-
-        Path zillaPath = launcherDir.resolve("zilla");
-        Files.write(zillaPath, lines);
+                "--sun-misc-unsafe-memory-access=%s\"".formatted(unsafeMemoryAccess),
+            String.format(String.join(" ", Arrays.asList(
+                    "exec $ZILLA_DIRECTORY/%s/bin/java",
+                    "$JAVA_OPTIONS",
+                    "-m io.aklivity.zilla.runtime.command/io.aklivity.zilla.runtime.command.internal.ZillaMain \"$@\"")),
+                imageDir)));
         zillaPath.toFile().setExecutable(true);
     }
 
